# Google_AI_Agent

./: .dockerignore  .env.example  .gitignore  README.md  conftest.py  docker-compose.yml  index.html  make_merged_dist.py  make_sample_contract.py  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  run_review.py  sample_contract_dangerous.docx  vite.config.ts
api/: index.py
backend/: agent_graph.py  config.py  hybrid_rag.py  law_client.py  llm_client.py  main.py  masking_guard.py  prompts.py  requirements.txt
backend/api/: schemas.py
backend/graph/: __init__.py  workflow.py
backend/rag/: __init__.py  chunking.py  embedding_service.py  retriever.py  status.py  vector_store.py
backend/services/: job_store.py  metrics.py  parser.py  pipeline_service.py  rate_limiter.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
fixtures/: sample_contract.txt
legal-screening-assistant-prototype-build/: index.html
modules/: __init__.py  agent_pipeline.py  db_connector.py  law_api_ingester.py  masking.py  parser.py  rag_retriever.py
scratch/: generate_test_pdfs.py  populate_civil_criminal_admin_laws.py  test_all_contracts.py  test_connection.py  test_connection_param.py  test_retrieval.py
scripts/: benchmark_kpi.py  verify_phase3.py  verify_phase4.md  verify_phase5.py  verify_phase7.py
src/: App.css  App.jsx  App.tsx  index.css
tests/: test_agent_pipeline.py  test_clause_accumulation.py  test_db_connector.py  test_law_api_ingester.py  test_masking.py  test_openai_ollama_fallback.py  test_parser.py  test_rag_retriever.py
(+23 files in other folders)
